# secure-demo-app

./: .gitignore  Makefile  install.sh
apps/client/: Dockerfile  main.py  pyproject.toml
apps/client/helm/: Chart.yaml  values.yaml
apps/protobuf/: Dockerfile  simple.proto
apps/server/: Dockerfile  go.mod  main.go
apps/server/helm/: values.yaml
apps/server/helm/templates/: deployment.yaml  service.yaml
apps/server/pb/: simple.pb.go  simple_grpc.pb.go
manifests/: bookinfo.yaml  istio-gateway.yaml  kiali.yaml  metallb.yaml
