[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Llewellyn Strydom <llewellyn.strydom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio-tools = "^1.58.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
